Corrige acentuação e adiciona crédito no rodapé
Corrige o acento na palavra 'versões' e adiciona o crédito de edição para 'Tutu' no rodapé da página.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </p>
 
                 <p>
-                    Acesse aqui a <a href="https://en.wikipedia.org/wiki/Android_version_history" target="_blank" class="externo">página da Wikipedia sobre as versoes do Android</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
+                    Acesse aqui a <a href="https://en.wikipedia.org/wiki/Android_version_history" target="_blank" class="externo">página da Wikipedia sobre as versões do Android</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
                 </p>
 
             </aside>
@@ -150,7 +150,7 @@
 
     <footer>
         <p>
-            Site criado por <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/c/CursoemVídeo" target="_blank">CursoemVideo</a>.
+            Site criado por <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/c/CursoemVídeo" target="_blank">CursoemVideo</a>. Editado por <a href="https://github.com/thurzyn001" target="_blank">Tutu.</a> 
         </p>
     </footer>
 
